--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: Terraform Deployment
 on:
   push:
     branches:
-      - main  # This triggers the workflow whenever you push to the main branch
+      - master  # This triggers the workflow whenever you push to the main branch
 
 jobs:
   terraform:
