--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,25 +3,35 @@ name: Terraform Deployment
 on:
   push:
     branches:
-      - master  # This triggers the workflow whenever you push to the main branch
+      - master  # Trigger the workflow on push to the master branch
 
 jobs:
   terraform:
-    runs-on: ubuntu-latest  # Runs the job on the latest version of Ubuntu
-
+    runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  # This checks out the code from your repository
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1  # This sets up Terraform on the runner
+      # Step 2: Set up AWS credentials
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Change this to your AWS region
 
-    - name: Terraform Init
-      run: terraform init  # Initializes Terraform in your project
+      # Step 3: Set up Terraform
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.0
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve  # Applies the Terraform configuration
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Uses your AWS Access Key from secrets
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Uses your AWS Secret Key from secrets
-        AWS_REGION: ${{ secrets.AWS_REGION }}  # Uses the AWS Region from secrets
+      # Step 4: Initialize Terraform
+      - name: Terraform Init
+        run: terraform init
+
+      # Step 5: Apply Terraform configuration
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
